# android-cmake

./: .gitignore  CMakeLists.txt
app/android/: local.properties  settings.gradle
app/android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/android/app/src/androidTest/java/com/nicolas/guillot/androidcmake/: ExampleInstrumentedTest.java
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/cpp/: native-lib.cpp
app/android/app/src/main/java/com/nicolas/guillot/androidcmake/: MainActivity.java
app/android/app/src/main/res/layout/: activity_main.xml
app/android/app/src/main/res/values/: strings.xml
app/android/app/src/test/java/com/nicolas/guillot/androidcmake/: ExampleUnitTest.java
app/lib/: CMakeLists.txt
app/lib/cpp/: Hello.cpp  Hello.h
core/lib/android/: CMakeLists.txt  build.gradle
core/lib/android/src/main/: AndroidManifest.xml
core/lib/android/src/main/cpp/: native-core.cpp
core/lib/android/src/main/java/com/nicolas/guillot/core/: Core.java
